; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ksz884x.c_port_set_power_saving.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ksz884x.c_port_set_power_saving.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ksz_port = type { i32, i32, %struct.ksz_hw* }
%struct.ksz_hw = type { i32 }

@KS884X_PORT_CTRL_4_OFFSET = common dso_local global i32 0, align 4
@PORT_POWER_DOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ksz_port*, i32)* @port_set_power_saving to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @port_set_power_saving(%struct.ksz_port* %0, i32 %1) #0 {
  %3 = alloca %struct.ksz_port*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ksz_hw*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ksz_port* %0, %struct.ksz_port** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.ksz_port*, %struct.ksz_port** %3, align 8
  %9 = getelementptr inbounds %struct.ksz_port, %struct.ksz_port* %8, i32 0, i32 2
  %10 = load %struct.ksz_hw*, %struct.ksz_hw** %9, align 8
  store %struct.ksz_hw* %10, %struct.ksz_hw** %5, align 8
  store i32 0, i32* %6, align 4
  %11 = load %struct.ksz_port*, %struct.ksz_port** %3, align 8
  %12 = getelementptr inbounds %struct.ksz_port, %struct.ksz_port* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %7, align 4
  br label %14

14:                                               ; preds = %27, %2
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.ksz_port*, %struct.ksz_port** %3, align 8
  %17 = getelementptr inbounds %struct.ksz_port, %struct.ksz_port* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = icmp slt i32 %15, %18
  br i1 %19, label %20, label %32

20:                                               ; preds = %14
  %21 = load %struct.ksz_hw*, %struct.ksz_hw** %5, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @KS884X_PORT_CTRL_4_OFFSET, align 4
  %24 = load i32, i32* @PORT_POWER_DOWN, align 4
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @port_cfg(%struct.ksz_hw* %21, i32 %22, i32 %23, i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %20
  %28 = load i32, i32* %6, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %7, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %7, align 4
  br label %14

32:                                               ; preds = %14
  ret void
}

declare dso_local i32 @port_cfg(%struct.ksz_hw*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
